[gd_scene load_steps=11 format=2]

[ext_resource path="res://props/interactables/vendor_hungry.gd" type="Script" id=1]
[ext_resource path="res://props/interactables/vendor_hungry.png" type="Texture" id=2]
[ext_resource path="res://pieces/shift_detector.tscn" type="PackedScene" id=3]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 24 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "eat"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=3]
resource_name = "eat_post"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 4, 5, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "untongueify"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "eat_pre"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "tongueify"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="vendor_hungry" type="Node2D"]
script = ExtResource( 1 )

[node name="shift_detector" parent="." instance=ExtResource( 3 )]

[node name="hitbox" type="CollisionShape2D" parent="shift_detector"]
position = Vector2( 0, -8 )
shape = SubResource( 6 )

[node name="entity_detector" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -8 )

[node name="hitbox" type="CollisionShape2D" parent="entity_detector"]
shape = SubResource( 6 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 2 )
hframes = 8

[node name="tongue" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 32, 0 )
width = 4.0
default_color = Color( 0.980392, 0.415686, 0.0392157, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="animator" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/eat = SubResource( 2 )
anims/eat_post = SubResource( 3 )
anims/eat_pre = SubResource( 4 )
anims/idle = SubResource( 5 )
next/eat_post = "idle"
next/eat_pre = "eat"

[node name="eat_timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="proceed_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="shifted" from="shift_detector" to="." method="_on_shift_detector_shifted"]
[connection signal="timeout" from="eat_timer" to="." method="_on_eat_timer_timeout"]
[connection signal="timeout" from="proceed_timer" to="." method="_on_proceed_timer_timeout"]
